2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Not Reviewed. 
        
        Fix obviou typo in previous commit.

        * tests/sunspider-1.0/bitops-bitwise-and.js:

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders Carlsson.

        SunSpider: all four bitops benchmarks can be replaced with NOP
        https://bugs.webkit.org/show_bug.cgi?id=38446

        * tests/sunspider-1.0/bitops-3bit-bits-in-byte.js:
        (TimeFunc): Save the result.
        * tests/sunspider-1.0/bitops-bits-in-byte.js:
        (TimeFunc): Save the result.
        * tests/sunspider-1.0/bitops-bitwise-and.js: More explicitly
        save the results.
        * tests/sunspider-1.0/bitops-nsieve-bits.js:
        (sieve): Save the result.

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        SunSpider: string-validate-input.js uses an undeclared variable named 'name', which is a DOM API
        https://bugs.webkit.org/show_bug.cgi?id=60937

        Reviewed by Dan Bernstein.

        * tests/sunspider-1.0/string-validate-input.js:
        (doTest): Rename the variable to username

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        SunSpider: The main function of math-cordic is dead code
        https://bugs.webkit.org/show_bug.cgi?id=63863
        
        Try to prevent math-cordic from being eliminated as dead code or
        compiled down to a constant.

        * tests/sunspider-1.0/math-cordic.js:
        (cordicsincos):
        (cordic):

2011-06-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Adam Barth.

        Create sunspider-1.0 directory in preparation for fixing a bunch of bugs
        https://bugs.webkit.org/show_bug.cgi?id=63782

        * make-hosted: Learn about the new directory.
        * tests/sunspider-1.0: Copied from PerformanceTests/SunSpider/tests/sunspider-0.9.1.

2010-11-29  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Gavin Barraclough.
