@@ -1,5 +1,15 @@
 2011-07-02  Maciej Stachowiak  <mjs@apple.com>
 
+        Sunspider 0.9.1 harness doesn't actually close() its test documents
+        https://bugs.webkit.org/show_bug.cgi?id=47045
+
+        Reviewed by Daniel Bates.
+
+        * hosted/versions.html:
+        * resources/driver-TEMPLATE.html:
+
+2011-07-02  Maciej Stachowiak  <mjs@apple.com>
+
         Not Reviewed. 
         
         Fix obviou typo in previous commit.
